Remove use of deprecated constructors
Change-Id: I92a11a2a7d45c65bce408714973b3dd5576f4d0d